Desactiver fenetre quand taches + barre chargement avec temps